K8s/Ingress/ingress_rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: my-mosquitto.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mosquitto-service
                port:
                  number: 1883
